test/integration/good/tuples/tuple-ix-assign4.stan
transformed data {
  (array[10] (int, array[100] real), int) x;
  x.1[1].1 = 5;
}
