test/integration/bad/real_idx.stan
transformed data {
  array[10] real a;
  a[1.0] = 5;
}
model {
}
